# wearable-assistant-context-bench

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  EXECUTION_PLAN.md  LICENSE  README.md  RELEASE_NOTES_v1.0.md  RESULTS.md  cleanup_post_v1.sh  pyproject.toml  requirements.txt
.agent-prompts/: CLAUDE_CODE_BUILD_PROMPT.md  CLAUDE_CODE_REMEDIATION_PROMPT.md  FAILURE_MODES.md  INCIDENT_CLASSES.md  INTERVENTIONS.md  PILOT_CORPUS_INVENTORY.md  SCENARIO_SEEDS.md  V0_2_UPDATE_PLAN.md  V1_1_SCENARIO_EXPANSION.md  _phase_0a_sources.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
benchmark/v1/: MANIFEST.lock.json  __init__.py  dataset_card.md  expected_answers.json  expected_answers_adversarial.json  expected_answers_v2_candidates.json  run.py  scenarios.json  scenarios_adversarial.json  scenarios_v2_candidates.json
benchmark/v1/results/: example_findings.md
benchmark/v1/runs/_dev/baseline-ablation-no-camera-pre-launch/: transcripts.jsonl
benchmark/v1/runs/_dev/baseline-cross-family-a-pre-launch/: findings.md  transcripts.jsonl
benchmark/v1/runs/_dev/baseline-same-family-pre-launch/: findings.md  transcripts.jsonl
benchmark/v1/runs/ablation-no-camera/: findings.md  transcripts.jsonl
benchmark/v1/runs/adversarial/: findings.md  transcripts.jsonl
benchmark/v1/runs/baseline/: findings.md
benchmark/v1/runs/baseline-ablation-no-camera/: findings.md
benchmark/v1/runs/baseline-alt/: findings.md  transcripts.jsonl
benchmark/v1/runs/baseline-cross-family-b/: findings.md  transcripts.jsonl
benchmark/v1/runs/baseline-deictic-repair/: findings.md  transcripts.jsonl
benchmark/v1/runs/baseline-qwen-cross-family/: transcripts.jsonl
benchmark/v1/runs/v1-baseline/: findings.md  transcripts.jsonl
benchmark/v1/runs/v1.0.0-gemini-v3/: findings.md  transcripts.jsonl
benchmark/v2/: expected_answers.json  scenarios.json
core/: gemini_adapter.py  interventions.py  litellm_adapter.py  llm_judge.py  models.py  openai_adapter.py  report.py  scoring.py  statistics.py
data/: MANIFEST.lock.json  README.md  config.json  prompt_conditions.json  wacb.jsonl
docs/: METHODOLOGY.md  api_keys.md  benchmark_card.html  benchmark_card.py  benchmark_notes.md  benchmark_spec.md  case_study.html  concept_v0_2.md  decisions.md  deferred_roadmap.md  deixis_bench_card.html  glossary.md  index.html  index.py  interventions.md  landing_page_v2_draft.md  limitations.md  methodology.md  og_image.py  related_work.md  running_open_weights.md  scenario_authoring_rules.md  schema.md  surface.md  v1-release-plan.md
docs/audits/: 2026-04-22-scenario-audit.csv  2026-04-22-scenario-audit.jsonl  2026-04-22-scenario-audit.md  README.md
docs/history/: V0_2_UPDATE_PLAN.md  V1_1_SCENARIO_EXPANSION.md  probe-study-archive.md  v1_language_pass_plan.md
docs/review/: scenarios_review.html  scenarios_review.md
experiments/: README.md
experiments/exp_001/: README.md  expected_answers.json  run.py  scenarios.json
results/: README.md  leakage_model_gemini.json
runs/ablation-no-camera/: findings.md  summary.json
runs/baseline/: findings.md  summary.json
runs/baseline-alt/: findings.md  summary.json
runs/baseline-deictic-repair/: findings.md  summary.json
runs/baseline-qwen-cross-family/: findings.md  summary.json
runs/contrast/: findings.md  summary.json
scripts/: README.md  analyze_runs.py  author_adversarial_pack.py  check_leakage_model.py  complete_baseline.py  generate_review_pdf.py  generate_review_sheet.py  regen_manifest_lock.py  scan_leakage.py  setup.sh  validate_scenarios.py
scripts/scenario_audit/: bootstrap_audit.py
tests/: conftest.py  test_adapters.py  test_camera_injection.py  test_gemini_adapter.py  test_interventions.py  test_judge_prompt_constraints.py  test_litellm_adapter.py  test_llm_judge.py  test_metrics.py  test_models.py  test_report.py  test_run.py  test_runner.py  test_scenario_audit_artifact.py  test_scenarios_config.py  test_schema.py  test_scoring.py  test_terminology.py  test_validator.py
tests/fixtures/: interventions_sample.json
wearable_assistant_context_bench/: gemini_adapter.py  litellm_adapter.py  llm_judge.py  models.py  prompt_conditions.py  report.py  runner.py  scoring.py  statistics.py
