[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wearable-assistant-context-bench"
version = "1.0.0"
description = "Context-tracking benchmark for multimodal AI assistants used actively for advice or coaching — wearable or handheld."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
  { name = "Nate Dryer" },
]
keywords = [
  "context-tracking",
  "multimodal",
  "wearable",
  "handheld",
  "ai-coach",
  "reference-resolution",
  "model-selection",
  "llm-as-judge",
  "scene-description",
  "egocentric",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "google-genai==1.73.1",
  "litellm==1.83.7",
  "spacy==3.8.13",
  "rapidfuzz==3.14.5",
  "python-dotenv==1.0.1",
  "weasyprint==68.1",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.3",
]

[project.urls]
Homepage = "https://github.com/n-dryer/wearable-assistant-context-bench"
Repository = "https://github.com/n-dryer/wearable-assistant-context-bench"
Issues = "https://github.com/n-dryer/wearable-assistant-context-bench/issues"

[tool.setuptools]
packages = ["core", "benchmark", "benchmark.v1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
