[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wearable-assistant-context-bench"
version = "0.1.0"
description = "Cross-turn reference-resolution benchmark for multimodal AI assistants used actively for advice or coaching, wearable or handheld."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
  { name = "Nate Dryer" },
]
keywords = [
  "reference-resolution",
  "cross-turn",
  "multimodal",
  "wearable",
  "handheld",
  "ai-coach",
  "model-selection",
  "llm-as-judge",
  "scene-description",
  "egocentric",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "google-genai==1.73.1",
  "litellm==1.83.7",
  "rapidfuzz==3.14.5",
  "python-dotenv==1.2.2",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.3",
  "pytest-cov==7.0.0",
  "ruff==0.13.3",
  "mypy==1.18.2",
]

[project.urls]
Homepage = "https://github.com/n-dryer/wearable-assistant-context-bench"
Repository = "https://github.com/n-dryer/wearable-assistant-context-bench"
Issues = "https://github.com/n-dryer/wearable-assistant-context-bench/issues"

[project.scripts]
wac-bench = "wearable_assistant_context_bench.runner:main"

[tool.setuptools]
packages = ["wearable_assistant_context_bench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
]
ignore = [
  "E501",  # line length is enforced by formatter, not linter
]

[tool.coverage.run]
source = ["wearable_assistant_context_bench"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
check_untyped_defs = true
